--- a/assets/collage.css
+++ b/assets/collage.css
@@ -161,6 +161,7 @@
   flex-direction: column;
   height: 100%;
   border-radius: 5rem;
+  position: relative;
 }
 
 .collage-content {
