--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -332,3 +332,19 @@
     transition: background-color var(--duration-long) ease;
   }
 }
+
+.spacer-squig {
+  aspect-ratio: 900/150;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+}
+
+.layer-squig {
+  background-image: url('./layersquig.svg');
+  transform: rotate(180deg);
+  width: 100%;
+}
