--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -26,6 +26,7 @@
 .cart-item__image {
   height: auto;
   max-width: 10rem;
+  border-radius: 2rem;
 }
 
 @media screen and (min-width: 750px) {
