--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -599,6 +599,7 @@ a.product__text {
 .product__media-list .deferred-media,
 .product__media-list .product__modal-opener {
   border: 0.1rem solid rgba(var(--color-foreground), 0.04);
+  border-radius: 5rem;
 }
 
 .product-media-modal__content > * {
